--- a/_config.yml
+++ b/_config.yml
@@ -19,16 +19,17 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Coffee, Programing
-email: namkyo361@example.com
+# email: namkyo361@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
 domain: "namgyolee.github.io"
-baseurl: "https://namgyolee.github.io" # the subpath of your site, e.g. /blog
+# baseurl: "https://namgyolee.github.io" # the subpath of your site, e.g. /blog
+baseurl: ""
 url: "blog" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  namkyo361
+github_username:  leenamgyo
 
 # Build settings
 theme: minima
